# tauri-crittoutil

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
.claude/commands/: release-android.md
coverage/: clover.xml  coverage-final.json  index.html
coverage/composables/: index.html  useCrypto.js.html
coverage/stores/: converter.js.html  decrypter.js.html  encrypter.js.html  index.html  keyGenerator.js.html  keyHistory.js.html
docs/: _config.yml  index.md  privacy-en.md  privacy-it.md
scripts/: android-patch.sh  generate-screenshots.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs
src/composables/: useConverterState.js  useCrypto.js  useDecrypterState.js  useEncrypterState.js  useKeyGeneratorState.js  useKeyHistory.js
src/i18n/: en.js  index.js  it.js
src/stores/: converter.js  decrypter.js  encrypter.js  keyGenerator.js  keyHistory.js
src/tests/: setup.js  stores.test.js  useCrypto.test.js
src/views/: ConverterView.vue  DecrypterView.vue  EncrypterView.vue  FileHasherView.vue  HomeView.vue  KeyGeneratorView.vue
ui_assets/: banner_playstore.afdesign
