[package]
name = "crittoutil"
version = "2.0.5"
description = "CrittoUtil - Cryptographic Utilities"
authors = ["Jonathan Lamela"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
md5 = "0.7"
aes = "0.8"
des = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
ecb = { version = "0.1", features = ["alloc"] }
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
base64 = "0.22"
rand = "0.8"
